gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-shorter_tail_lifetimes_dg.rs
fn f() -> usize {
    let c = std::cell::RefCell::new("..");
    c.borrow().len() // { dg-error ".E0597." "" { target *-*-* } }
}

fn main() {
    let _ = f();
}

